# midl

./: .gitignore  COMMERCIAL.md  LICENSE  Makefile  README.md  package-lock.json  package.json
.superpowers/sdd/: decimals-colspan-report.md  inspector-polish-report.md  renderer-span-report.md  task-0-final-review-fixes.md  task-0.2-report.md  task-0.3-report.md  task-0.5-report.md  task-0.6-report.md  task-0.8-report.md
conformance/: README.md  cases.yaml  expected.json  gen-expected.mjs
cpp/include/: yb_midl_catalog.h
cpp/tools/: check_catalog.cpp  gen.cpp
dist-global/: midl-editor.global.js
docs/: validation-conformance.md
docs/plans/: 2026-06-20-meta-and-solver.md  2026-06-26-data-browser-fontsize.md
docs/specs/: 2026-06-21-midl-svg-renderer-design.md
editor/: package.json  test-global.mjs  tsconfig.build.json  tsconfig.json  vite.global.config.ts  vite.lib.config.ts  vitest.config.ts
editor/dist-global/: midl-editor.global.js
editor/src/: MidlEditor.data-tab.test.tsx  MidlEditor.test.tsx  MidlEditor.tsx  adapters.ts  device-lint.test.ts  device-lint.ts  index.test.ts  index.ts  midl-io.ts  (+17 more)
py/: pyproject.toml
py/src/yey_boats_midl/: __init__.py  presets.py  satisfy.py  semantic.py  types.py  validate.py  version.py
py/tests/: test_conformance.py  test_limits.py
schemas/: yb-midl-capabilities.schema.json  yb-midl-config.schema.json
tools/: gen-library.mjs
ts/: package-lock.json  package.json  tsconfig.json  tsup.config.ts
web/: .gitignore  device-demo.html  index.html  package.json  tsconfig.json  vite.config.ts  vite.device.config.ts
(+91 files in other folders)
